# ansible-role-infrastructure

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
files/terraform/: main.tf  terraform.tfvars.example  variables.tf
files/terraform/scripts/: cloud-init.yml
meta/: main.yml
tasks/: main.yml
vars/: main.yml
